# asqi-engineer

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION.md  DEVELOPMENT.md  Dockerfile  MULTI_FORMAT_DATASET_EXAMPLE.md  README.md  asqi_score_card.json  chatbot_asqi_assessment.json  cliff.toml  dummy.md  litellm_config.yaml  output_scorecard.json  pyproject.toml  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yaml
config/: docker_container.yaml
docker/: docker-compose.yml
docs/: agent-test-containers.md  architecture.md  cli.rst  conf.py  configuration.md  custom-test-containers.md  datasets.md  examples.md  index.rst  interface-spec.md  library.md  llm-test-containers.md  quickstart.md  rag-test-containers.md  system-apis.md  test-containers.md
k8s/: rbac.yaml
litellm_integrations/: __init__.py  litellm_handlers.py
logs/: chatbot_asqi_assessment.json
scripts/: build_hooks.py  generate_schemas.py  prepare_asqi_pkg.sh  release.sh
src/: main.py
test_containers/: build_all.sh
test_data/: sample_documentation.txt
tests/: conftest.py  test_config.py  test_config_templates.py  test_container_manager.py  test_contract_cli.py  test_contract_config_helpers.py  test_contract_implicit.py  test_contract_public_surface.py  test_contract_schemas.py  test_contract_sdk.py  test_contract_workflows.py  test_cross_container_integration.py  test_data.py  test_datasets.py  test_datasets_dispatch.py  test_docker_backend.py  test_docker_backend_run_params.py  test_loaders.py  (+16 more)
(+257 files in other folders)
